# GNU

gr-equalizer_dfe/: CMakeLists.txt  MANIFEST.md  plots.ods
gr-equalizer_dfe/Testing_tool_kit/: Generator.grc  Testing_Blocks.grc  top_block.py  training_output
gr-equalizer_dfe/cmake/Modules/: equalizer_dfeConfig.cmake
gr-equalizer_dfe/docs/: README.equalizer_dfe
gr-equalizer_dfe/docs/doxygen/: Doxyfile.in
gr-equalizer_dfe/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-equalizer_dfe/grc/: CMakeLists.txt  equalizer_dfe_dfe.xml
gr-equalizer_dfe/include/equalizer_dfe/: CMakeLists.txt  api.h
gr-equalizer_dfe/lib/: CMakeLists.txt  qa_equalizer_dfe.cc  qa_equalizer_dfe.h  test_equalizer_dfe.cc
gr-equalizer_dfe/python/: CMakeLists.txt  __init__.py  dfe.py  output.npy  qa_dfe.py  true.npy
gr-equalizer_dfe/python/.unittests/python/: qa_dfe.xml
gr-equalizer_dfe/swig/: CMakeLists.txt  equalizer_dfe_swig.i
gr-equalizer_nn/: CMakeLists.txt  MANIFEST.md
gr-equalizer_nn/Testing_tool_kit/: Generator.grc  Plots.ods  Testing_Blocks.grc  check.py  top_block.py  training  training_output
gr-equalizer_nn/cmake/Modules/: equalizer_nnConfig.cmake
gr-equalizer_nn/docs/: README.equalizer_nn
gr-equalizer_nn/docs/doxygen/: Doxyfile.in
gr-equalizer_nn/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-equalizer_nn/grc/: CMakeLists.txt  equalizer_nn_neural_net.xml
gr-equalizer_nn/include/equalizer_nn/: CMakeLists.txt  api.h
gr-equalizer_nn/lib/: CMakeLists.txt  qa_equalizer_nn.cc  qa_equalizer_nn.h  test_equalizer_nn.cc
gr-equalizer_nn/python/: CMakeLists.txt  __init__.py  neural_net.py  qa_neural_net.py
gr-equalizer_nn/python/.unittests/python/: qa_neural_net.xml
gr-equalizer_nn/swig/: CMakeLists.txt  equalizer_nn_swig.i
gr-lms_equaliser/: CMakeLists.txt  MANIFEST.md
gr-lms_equaliser/cmake/Modules/: lms_equaliserConfig.cmake
gr-lms_equaliser/docs/: README.lms_equaliser
gr-lms_equaliser/docs/doxygen/: Doxyfile.in
gr-lms_equaliser/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-lms_equaliser/grc/: CMakeLists.txt  lms_equaliser_lms_ff.xml
gr-lms_equaliser/include/lms_equaliser/: CMakeLists.txt  api.h
gr-lms_equaliser/lib/: CMakeLists.txt  qa_lms_equaliser.cc  qa_lms_equaliser.h  test_lms_equaliser.cc
gr-lms_equaliser/python/: CMakeLists.txt  __init__.py  lms_ff.py  output.npy  qa_lms_ff.py  testing.npy  training.npy  true.npy
gr-lms_equaliser/python/.unittests/python/: qa_lms_ff.xml
gr-lms_equaliser/swig/: CMakeLists.txt  lms_equaliser_swig.i
gr-neural_network/: CMakeLists.txt  MANIFEST.md
gr-neural_network/cmake/Modules/: neural_networkConfig.cmake
gr-neural_network/docs/: README.neural_network
gr-neural_network/docs/doxygen/: Doxyfile.in
gr-neural_network/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-neural_network/grc/: CMakeLists.txt  neural_network_nn_equilizer_ff.xml
gr-neural_network/include/neural_network/: CMakeLists.txt  api.h
gr-neural_network/lib/: CMakeLists.txt  qa_neural_network.cc  qa_neural_network.h  test_neural_network.cc
gr-neural_network/python/: CMakeLists.txt  __init__.py  net.py  nn_equilizer_ff.py  qa_nn_equilizer_ff.py  training_seq.npy
gr-neural_network/python/.unittests/python/: qa_nn_equilizer_ff.xml
gr-neural_network/swig/: CMakeLists.txt  neural_network_swig.i
